Fix: Resize brand-image to account for tightly cropped logo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,13 +138,13 @@ nav {
 
 
 .brand-image {
-  width: 111px;
-  height: 111px;
+  width: 55px;
+  height: 55px;
   object-fit: contain;
   z-index: 1;
   filter: drop-shadow(0 0 25px rgba(0, 255, 200, 0.7));
   position: relative;
-  margin-left: -20px;
+  margin-left: 8px;
 }
 
 
